--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "description" : "package file which installs authoring dependency: smartgraphs-generator",
   "version" : "0.0.1",
   "dependencies" : {
-    "smartgraphs-generator" : "git://github.com/concord-consortium/smartgraphs-generator.git#multi_dataset_labels_in_datadefs"
+    "smartgraphs-generator" : "git://github.com/concord-consortium/smartgraphs-generator.git#multiple_datasets"
   }
 }
